Add Vacancy entity with CRUD and validation. Add Swagger UI

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,8 @@
-validation.project.name=Name should start with a capital letter and contain only letters and spaces (max 100 characters).
+validation.project.name=Name should start with a capital letter and contain only letters and spaces and should not exceed 100 characters.
 validation.project.field=Field should not be empty.
-validation.project.experience=Experience should not be empty and should be in the future.
 validation.project.deadline=Deadline should not be empty and should be in the future.
 validation.project.description=Description should be no more than 1000 symbols.
+validation.vacancy.name=Name should start with a capital letter and contain 2-4 words (letters, hyphens, spaces) and should not exceed 45 characters.
+validation.vacancy.field=Field should not be empty.
+validation.vacancy.country=Country should not be empty.
+validation.vacancy.description=Description should be no more than 1000 symbols.
