--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.generate-ddl=true
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
 
 spring.jpa.showSql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/db.changelog-master.xml
