Add dev/prod Spring profiles and environment settings. Add Dockerfile and docker-compose for local dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.config.import=optional:file:.env.properties
 spring.application.name=workNest
 
+spring.profiles.active=dev
+
 server.port=8080
 
-spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
