Add CORS- and OpenAPI-configs for deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.config.import=optional:file:.env.properties
 spring.application.name=workNest
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 server.port=8080
 
